@@ -1,3 +1,15 @@
+2009-04-24  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/39791
+	Backport from mainline:
+
+	2008-08-22  Jakub Jelinek  <jakub@redhat.com>
+
+	* dwarf2out.c (add_subscript_info): Stop on Fortran TYPE_STRING_FLAG
+	types.
+	(gen_array_type_die): Emit DW_TAG_string_type for Fortran character
+	types.
+
 2009-04-23  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
 
 	* config/spu/spu-builtins.h: Delete file.
